ace_y.output
Terminals unused in grammar

   ATTRNAME


Grammar

    0 $accept: program $end

    1 program: input

    2 input: /* empty */
    3      | input aaasg
    4      | input aaaacc
    5      | input aaalog
    6      | input probe
    7      | input rserver

    8 aaasg: AAASG ident ident EOL attrblock EOL

    9 aaaacc: AAAACC attributeList

   10 aaalog: AAALOG attributeList

   11 probe: PROBE ident ident EOL attrblock EOL
   12      | PROBE ident EOL attrblock EOL

   13 rserver: RSERVER ident ident EOL attrblock EOL
   14        | RSERVER ident EOL attrblock EOL

   15 attrblock: IND attributeList DED

   16 attributeList: attribute
   17              | attribute EOL
   18              | attributeList attribute
   19              | attributeList attribute EOL

   20 attribute: ATTRSTR ident
   21          | ATTRINT ident
   22          | ATTRINT
   23          | ATTRIPV4 ident
   24          | ATTRSTR2 ident
   25          | ATTRSTR2 ident ident
   26          | ATTRINT2 ident
   27          | ATTRINT2 ident ident
   28          | ATTRCOMP ident ATTRSTR ident
   29          | ATTRBOOL
   30          | ATTRSNMPPROBE ident EOL attrblock
   31          | NO ATTRSTR
   32          | NO ATTRINT
   33          | NO ATTRBOOL

   34 ident: TIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
EOL (258) 8 11 12 13 14 17 19 30
IND (259) 15
DED (260) 15
NO (261) 31 32 33
AAASG (262) 8
AAAACC (263) 9
AAALOG (264) 10
PROBE (265) 11 12
ATTRSNMPPROBE (266) 30
ATTRCOMP (267) 28
RSERVER (268) 13 14
TIDENTIFIER (269) 34
ATTRNAME (270)
ATTRBOOL (271) 29 33
ATTRINT (272) 21 22 32
ATTRSTR (273) 20 28 31
ATTRIPV4 (274) 23
ATTRINT2 (275) 26 27
ATTRSTR2 (276) 24 25


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
input (24)
    on left: 2 3 4 5 6 7, on right: 1 3 4 5 6 7
aaasg (25)
    on left: 8, on right: 3
aaaacc (26)
    on left: 9, on right: 4
aaalog (27)
    on left: 10, on right: 5
probe (28)
    on left: 11 12, on right: 6
rserver (29)
    on left: 13 14, on right: 7
attrblock (30)
    on left: 15, on right: 8 11 12 13 14 30
attributeList (31)
    on left: 16 17 18 19, on right: 9 10 15 18 19
attribute (32)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33, on right: 16
    17 18 19
ident (33)
    on left: 34, on right: 8 11 12 13 14 20 21 23 24 25 26 27 28 30


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (input)

    program  go to state 1
    input    go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: input .
    3 input: input . aaasg
    4      | input . aaaacc
    5      | input . aaalog
    6      | input . probe
    7      | input . rserver

    AAASG    shift, and go to state 4
    AAAACC   shift, and go to state 5
    AAALOG   shift, and go to state 6
    PROBE    shift, and go to state 7
    RSERVER  shift, and go to state 8

    $default  reduce using rule 1 (program)

    aaasg    go to state 9
    aaaacc   go to state 10
    aaalog   go to state 11
    probe    go to state 12
    rserver  go to state 13


state 3

    0 $accept: program $end .

    $default  accept


state 4

    8 aaasg: AAASG . ident ident EOL attrblock EOL

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 15


state 5

    9 aaaacc: AAAACC . attributeList

    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    attributeList  go to state 25
    attribute      go to state 26


state 6

   10 aaalog: AAALOG . attributeList

    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    attributeList  go to state 27
    attribute      go to state 26


state 7

   11 probe: PROBE . ident ident EOL attrblock EOL
   12      | PROBE . ident EOL attrblock EOL

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 28


state 8

   13 rserver: RSERVER . ident ident EOL attrblock EOL
   14        | RSERVER . ident EOL attrblock EOL

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 29


state 9

    3 input: input aaasg .

    $default  reduce using rule 3 (input)


state 10

    4 input: input aaaacc .

    $default  reduce using rule 4 (input)


state 11

    5 input: input aaalog .

    $default  reduce using rule 5 (input)


state 12

    6 input: input probe .

    $default  reduce using rule 6 (input)


state 13

    7 input: input rserver .

    $default  reduce using rule 7 (input)


state 14

   34 ident: TIDENTIFIER .

    $default  reduce using rule 34 (ident)


state 15

    8 aaasg: AAASG ident . ident EOL attrblock EOL

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 30


state 16

   31 attribute: NO . ATTRSTR
   32          | NO . ATTRINT
   33          | NO . ATTRBOOL

    ATTRBOOL  shift, and go to state 31
    ATTRINT   shift, and go to state 32
    ATTRSTR   shift, and go to state 33


state 17

   30 attribute: ATTRSNMPPROBE . ident EOL attrblock

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 34


state 18

   28 attribute: ATTRCOMP . ident ATTRSTR ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 35


state 19

   29 attribute: ATTRBOOL .

    $default  reduce using rule 29 (attribute)


state 20

   21 attribute: ATTRINT . ident
   22          | ATTRINT .

    TIDENTIFIER  shift, and go to state 14

    $default  reduce using rule 22 (attribute)

    ident  go to state 36


state 21

   20 attribute: ATTRSTR . ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 37


state 22

   23 attribute: ATTRIPV4 . ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 38


state 23

   26 attribute: ATTRINT2 . ident
   27          | ATTRINT2 . ident ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 39


state 24

   24 attribute: ATTRSTR2 . ident
   25          | ATTRSTR2 . ident ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 40


state 25

    9 aaaacc: AAAACC attributeList .
   18 attributeList: attributeList . attribute
   19              | attributeList . attribute EOL

    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    $default  reduce using rule 9 (aaaacc)

    attribute  go to state 41


state 26

   16 attributeList: attribute .
   17              | attribute . EOL

    EOL  shift, and go to state 42

    $default  reduce using rule 16 (attributeList)


state 27

   10 aaalog: AAALOG attributeList .
   18 attributeList: attributeList . attribute
   19              | attributeList . attribute EOL

    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    $default  reduce using rule 10 (aaalog)

    attribute  go to state 41


state 28

   11 probe: PROBE ident . ident EOL attrblock EOL
   12      | PROBE ident . EOL attrblock EOL

    EOL          shift, and go to state 43
    TIDENTIFIER  shift, and go to state 14

    ident  go to state 44


state 29

   13 rserver: RSERVER ident . ident EOL attrblock EOL
   14        | RSERVER ident . EOL attrblock EOL

    EOL          shift, and go to state 45
    TIDENTIFIER  shift, and go to state 14

    ident  go to state 46


state 30

    8 aaasg: AAASG ident ident . EOL attrblock EOL

    EOL  shift, and go to state 47


state 31

   33 attribute: NO ATTRBOOL .

    $default  reduce using rule 33 (attribute)


state 32

   32 attribute: NO ATTRINT .

    $default  reduce using rule 32 (attribute)


state 33

   31 attribute: NO ATTRSTR .

    $default  reduce using rule 31 (attribute)


state 34

   30 attribute: ATTRSNMPPROBE ident . EOL attrblock

    EOL  shift, and go to state 48


state 35

   28 attribute: ATTRCOMP ident . ATTRSTR ident

    ATTRSTR  shift, and go to state 49


state 36

   21 attribute: ATTRINT ident .

    $default  reduce using rule 21 (attribute)


state 37

   20 attribute: ATTRSTR ident .

    $default  reduce using rule 20 (attribute)


state 38

   23 attribute: ATTRIPV4 ident .

    $default  reduce using rule 23 (attribute)


state 39

   26 attribute: ATTRINT2 ident .
   27          | ATTRINT2 ident . ident

    TIDENTIFIER  shift, and go to state 14

    $default  reduce using rule 26 (attribute)

    ident  go to state 50


state 40

   24 attribute: ATTRSTR2 ident .
   25          | ATTRSTR2 ident . ident

    TIDENTIFIER  shift, and go to state 14

    $default  reduce using rule 24 (attribute)

    ident  go to state 51


state 41

   18 attributeList: attributeList attribute .
   19              | attributeList attribute . EOL

    EOL  shift, and go to state 52

    $default  reduce using rule 18 (attributeList)


state 42

   17 attributeList: attribute EOL .

    $default  reduce using rule 17 (attributeList)


state 43

   12 probe: PROBE ident EOL . attrblock EOL

    IND  shift, and go to state 53

    attrblock  go to state 54


state 44

   11 probe: PROBE ident ident . EOL attrblock EOL

    EOL  shift, and go to state 55


state 45

   14 rserver: RSERVER ident EOL . attrblock EOL

    IND  shift, and go to state 53

    attrblock  go to state 56


state 46

   13 rserver: RSERVER ident ident . EOL attrblock EOL

    EOL  shift, and go to state 57


state 47

    8 aaasg: AAASG ident ident EOL . attrblock EOL

    IND  shift, and go to state 53

    attrblock  go to state 58


state 48

   30 attribute: ATTRSNMPPROBE ident EOL . attrblock

    IND  shift, and go to state 53

    attrblock  go to state 59


state 49

   28 attribute: ATTRCOMP ident ATTRSTR . ident

    TIDENTIFIER  shift, and go to state 14

    ident  go to state 60


state 50

   27 attribute: ATTRINT2 ident ident .

    $default  reduce using rule 27 (attribute)


state 51

   25 attribute: ATTRSTR2 ident ident .

    $default  reduce using rule 25 (attribute)


state 52

   19 attributeList: attributeList attribute EOL .

    $default  reduce using rule 19 (attributeList)


state 53

   15 attrblock: IND . attributeList DED

    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    attributeList  go to state 61
    attribute      go to state 26


state 54

   12 probe: PROBE ident EOL attrblock . EOL

    EOL  shift, and go to state 62


state 55

   11 probe: PROBE ident ident EOL . attrblock EOL

    IND  shift, and go to state 53

    attrblock  go to state 63


state 56

   14 rserver: RSERVER ident EOL attrblock . EOL

    EOL  shift, and go to state 64


state 57

   13 rserver: RSERVER ident ident EOL . attrblock EOL

    IND  shift, and go to state 53

    attrblock  go to state 65


state 58

    8 aaasg: AAASG ident ident EOL attrblock . EOL

    EOL  shift, and go to state 66


state 59

   30 attribute: ATTRSNMPPROBE ident EOL attrblock .

    $default  reduce using rule 30 (attribute)


state 60

   28 attribute: ATTRCOMP ident ATTRSTR ident .

    $default  reduce using rule 28 (attribute)


state 61

   15 attrblock: IND attributeList . DED
   18 attributeList: attributeList . attribute
   19              | attributeList . attribute EOL

    DED            shift, and go to state 67
    NO             shift, and go to state 16
    ATTRSNMPPROBE  shift, and go to state 17
    ATTRCOMP       shift, and go to state 18
    ATTRBOOL       shift, and go to state 19
    ATTRINT        shift, and go to state 20
    ATTRSTR        shift, and go to state 21
    ATTRIPV4       shift, and go to state 22
    ATTRINT2       shift, and go to state 23
    ATTRSTR2       shift, and go to state 24

    attribute  go to state 41


state 62

   12 probe: PROBE ident EOL attrblock EOL .

    $default  reduce using rule 12 (probe)


state 63

   11 probe: PROBE ident ident EOL attrblock . EOL

    EOL  shift, and go to state 68


state 64

   14 rserver: RSERVER ident EOL attrblock EOL .

    $default  reduce using rule 14 (rserver)


state 65

   13 rserver: RSERVER ident ident EOL attrblock . EOL

    EOL  shift, and go to state 69


state 66

    8 aaasg: AAASG ident ident EOL attrblock EOL .

    $default  reduce using rule 8 (aaasg)


state 67

   15 attrblock: IND attributeList DED .

    $default  reduce using rule 15 (attrblock)


state 68

   11 probe: PROBE ident ident EOL attrblock EOL .

    $default  reduce using rule 11 (probe)


state 69

   13 rserver: RSERVER ident ident EOL attrblock EOL .

    $default  reduce using rule 13 (rserver)
